--- a/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
+++ b/presentation/making-research-materials-findable-accessible-interoperable-reusable-fair/index.html
@@ -1086,7 +1086,9 @@ Your browser does not support embedded PDFs. <a href="https://cdn.jsdelivr.net/g
 </p>
 </iframe>
 </div>
-<p><br></p>
+<div style="margin-top: 8%;">
+
+</div>
 <div id="snippet-1" class="section level4">
 <h4>Snippet 1</h4>
 <p><em>The use of code scripts facilitates the reproducibility, testability and expandability of materials.</em></p>
