--- a/presentation/scaling-systematic-reviews-a-solo-researchers-workflow-with-gemini/index.html
+++ b/presentation/scaling-systematic-reviews-a-solo-researchers-workflow-with-gemini/index.html
@@ -1087,8 +1087,10 @@ Your browser does not support embedded PDFs. <a href="https://cdn.jsdelivr.net/g
 </div>
 <div id="background-references" class="section level2">
 <h2>Background References</h2>
+<div class="hanging-indent">
 <p>Bernabeu, P. (2024). <em>rscopus_plus</em>. OSF. <a href="https://doi.org/10.17605/OSF.IO/BUZQ6" class="uri">https://doi.org/10.17605/OSF.IO/BUZQ6</a></p>
 <p>Malik, M., &amp; Sime, J. A. (2025). Teamwork, co-regulation, and socially shared regulation skills within engineering education studies: A GenAI-assisted scoping review. <em>ASEE Annual Conference &amp; Exposition, Montreal, Quebec, Canada</em>. <a href="https://doi.org/10.18260/1-2--57199" class="uri">https://doi.org/10.18260/1-2--57199</a></p>
+</div>
 </div>
 
     </div>
