--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 
 
 <img src="/img/materials_large_color.png" alt="Open Materials" class="open-science-badge" data-badge-type="Open Materials">
-
+<img src="/img/data_large_color.png" alt="Open Data" class="open-science-badge" data-badge-type="Open Data">
 </span>
 
 
@@ -4819,7 +4819,7 @@
 <table>
 <thead>
 <tr>
-<th align="center"></th>
+<th align="center"><strong>Year</strong></th>
 <th><strong>Course and remit</strong></th>
 </tr>
 </thead>
