--- a/publication/secure-local-hpc-speech-transcription/index.html
+++ b/publication/secure-local-hpc-speech-transcription/index.html
@@ -894,7 +894,7 @@
 
 
 <img src="/img/materials_large_color.png" alt="Open Materials" class="open-science-badge" data-badge-type="Open Materials">
-
+<img src="/img/data_large_color.png" alt="Open Data" class="open-science-badge" data-badge-type="Open Data">
 </span>
 
 
